jellyfin-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jellyfin
  labels:
    app: jellyfin
    part-of: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
      part-of: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
        part-of: jellyfin
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: disktype
                operator: In
                values:
                - ssd
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin:10.8.0
        ports:
        - name: jellyfin
          containerPort: 8096
          #hostPort: 8096
        - name: dlna-service
          containerPort: 1900
          protocol: UDP
          #hostPort: 1900
        - name: dlna-client
          containerPort: 7359
          protocol: UDP
          #hostPort: 7359
        resources:
          limits:
            gpu.intel.com/i915: 1
            memory: 2Gi
          requests:
            memory: 1500Mi
        readinessProbe:
          httpGet:
            path: /health
            port: jellyfin
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: jellyfin
          initialDelaySeconds: 10
          periodSeconds: 20
        volumeMounts:
        - name: jellyfin
          mountPath: /config
        - name: movies
          mountPath: /data/movies
#        - name: movies4k
#          mountPath: /data/movies4k
        - name: series
          mountPath: /data/series
        - name: animes
          mountPath: /data/animes
        - name: musics
          mountPath: /data/musics
        - name: books
          mountPath: /data/books
      volumes:
      - name: jellyfin
        persistentVolumeClaim:
          claimName: jellyfin
      - name: movies
        persistentVolumeClaim:
          claimName: movies
#      - name: movies4k
#        persistentVolumeClaim:
#          claimName: movies4k
      - name: series
        persistentVolumeClaim:
          claimName: series
      - name: animes
        persistentVolumeClaim:
          claimName: animes
      - name: musics
        persistentVolumeClaim:
          claimName: musics
      - name: books
        persistentVolumeClaim:
          claimName: books
